# crdt-genome

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: run_test.sh
src/: config.rs  genome.rs  main.rs  mutate.rs  state.rs  verify.rs
