[package]
name = "crdt-genome"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.2.8"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
crdts = "7"
tower-http = { version = "0.1", features = ["full"] }
tower = "0.4.9"
serde_json = "1.0.68"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
