[package]
name = "crdt-genome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
axum = "0.4.3"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["full"] }
crdts = "7.0.0"
tower-http = { version = "0.2.0", features = ["full"] }
tower = "0.4.11"
serde_json = "1.0.73"
hyper = { version = "0.14.16", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version="0.3", features=["env-filter"] }
clap = "2.34.0"
thiserror = "1.0.30"
